// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render "show less" 1`] = `
<footer
  className="note spacer-top spacer-bottom text-center"
>
  x_show.15
</footer>
`;

exports[`should not render "show more" 1`] = `
<footer
  className="note spacer-top spacer-bottom text-center"
>
  x_show.3
</footer>
`;

exports[`should show less 1`] = `
<footer
  className="note spacer-top spacer-bottom text-center"
>
  x_show.15
  <ButtonLink
    className="spacer-left"
    onClick={[Function]}
  >
    show_less
  </ButtonLink>
</footer>
`;

exports[`should show more 1`] = `
<footer
  className="note spacer-top spacer-bottom text-center"
>
  x_show.3
  <ButtonLink
    className="spacer-left"
    onClick={[Function]}
  >
    show_more
  </ButtonLink>
</footer>
`;
